--- a/tmpl/new.html
+++ b/tmpl/new.html
@@ -147,69 +147,135 @@
         <hr>
         <ul>
             <li>
-                Very good knowledge of <b>Java</b> version <b>8</b> and its data structures, including
-                <b>Optional</b>, <b>Streams</b> and <b>Regex</b> expressions
+                Highly proficient in participating in architectural discussions and decision-making to improve system
+                design and
+                functionality, collaborating with cross-functional teams to gather requirements and ensure successful
+                project
+                delivery.
             </li>
             <li>
-                Very good knowledge of <b>Spring Framework</b> and <b>Spring Security</b>
+                Highly skilled in leading technical interviews to recruit highly skilled professionals, ensuring the
+                addition of
+                top-tier
+                talent and senior developers to the team.
             </li>
             <li>
-                Very good command of <b>C#</b> version <b>5.0</b> and its data structures, inter alia,
-                structures <b>IEnumerable</b>, <b>ICollection</b>, <b>OneOf</b>, <b>LINQ</b>,
-                <b>await/async</b>, <b>Regex</b> and <b>Reflection</b>
+                Skilled in creating and deploying cloud infrastructure using <b>Terraform</b> with <b>Kubernetes</b> and
+                <b>AWS</b>
+                provider.
             </li>
             <li>
-                Very good command of <b>.NET</b> framework and <b>Entity Framework</b>, <b>Migrations</b>,
-                <b>Identity Server 4</b> and <b>MassTransit</b>
+                Proficient in developing and maintaining pods, replicaSets, deployments, and services in
+                <b>Kubernetes</b> using
+                <b>Helm</b> package manager and <b>ArgoCD</b>.
             </li>
             <li>
-                Very good knowledge of <b>Python</b> version <b>3.7</b>, especially in data analysis and
-                building models to perform predictions, classification, learning about data structure, data
-                tagging, generating synthetic data using <b>Sklearn</b>, <b>Pytorch</b>, <b>Tensorflow</b> and
-                <b>Keras</b>
+                Experienced in configuring and integrating <b>AWS</b> services such as <b>OpenSearch/ElasticSearch</b>,
+                <b>DynamoDB</b>, <b>SQS</b>, <b>SNS</b>, <b>S3</b>, and <b>Lambda</b> with existing and new APIs.
             </li>
             <li>
-                Very good knowledge of <b>Docker</b> and <b>Kubernetes</b>
+                Proficient in setting up monitoring and alerting systems using <b>Prometheus</b> with <b>Grafana</b> and
+                <b>Elastic
+                    APM</b> to track system health and performance.
             </li>
             <li>
-                Very good knowledge of <b>Linux</b> and <b>Bash</b>
+                Highly skilled in benchmarking and improving the performance of existing services by leveraging advanced
+                features
+                such as the <b>sync</b> package for concurrent data handling, implementing efficient <b>generics</b> for
+                reusable
+                type-safe code, and utilizing <b>goroutines</b>, <b>channels</b>, and <b>waitGroups</b> for
+                high-performance,
+                concurrent applications.
             </li>
             <li>
-                Very good knowledge of <b>Windows Forms</b>
+                Proficient in implementing <b>CI/CD</b> pipelines in <b>GitLab</b> to standardize deployments,
+                conducting
+                thorough code
+                reviews, and writing comprehensive unit tests.
             </li>
             <li>
-                Very good knowledge of <b>VueJS</b> and <b>AngularJS</b> frameworks, frontend application
-                <b>state management</b>, dynamic data sending, displaying <b>API requests</b>
+                Skilled in implementing log aggregation and analysis with tools like the <b>ELK (Elasticsearch,
+                    Logstash,
+                    Kibana)</b> stack.
             </li>
             <li>
-                Very good knowledge of <b>NodeJS</b> with <b>Typescript</b>, <b>ExpressJS</b>, <b>NestJS</b> and
-                <b>TypeORM</b>
+                Proficient in migrating legacy applications and services to a microservices architecture, and developing
+                and
+                maintaining <b>RESTful</b> and <b>GraphQL APIs</b> to support frontend and mobile applications.
             </li>
             <li>
-                Very good knowledge of <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b>, <b>GRPC</b>
+                Strong proficiency in <b>Java</b> version <b>8</b>, with extensive experience in data structures
+                including
+                <b>Optional</b>, <b>Streams</b>, and <b>Regex</b> expressions.
             </li>
             <li>
-                Very good knowledge of the practices of writing <b>Clean Code</b> <b>Uncle Bob's</b>,
-                <b>SOLID</b> principles, <b>DDD</b>, <b>TDD</b>, <b>YARNI</b>, <b>DRY</b>, <b>KISS</b> and
-                knowledge of design patterns such as <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>SOA</b>
+                In-depth knowledge of <b>Spring Framework</b> and <b>Spring Security</b>.
             </li>
             <li>
-                Very good knowledge of relational databases such as: <b>SQL Server</b> with <b>SQL Queries</b>,
-                <b>Stored Procedures</b>, <b>Triggers</b>, <b>Indexes</b> and <b>MySQL</b>, <b>PostgresSQL</b>
+                Advanced command of <b>C#</b> version <b>5.0</b>, including data structures such as <b>IEnumerable</b>,
+                <b>ICollection</b>, <b>OneOf</b>, <b>LINQ</b>, <b>await/async</b>, <b>Regex</b>, and <b>Reflection</b>.
             </li>
             <li>
-                Very good knowledge of non-relational databases such as: <b>MongoDB</b>, <b>Redis</b>, poor
-                <b>Apache Cassandra</b>
+                Strong knowledge of the <b>.NET</b> framework and <b>Entity Framework</b>, with proficiency in
+                <b>Migrations</b>,
+                <b>Identity
+                    Server 4</b>, and <b>MassTransit</b>.
             </li>
             <li>
-                Ability to write unit tests and tests using the <b>Selenium</b> framework
+                Extensive experience with <b>Python</b> version <b>3.7</b> for data analysis, predictive modeling,
+                classification,
+                data structuring, tagging, and generating synthetic data using <b>Sklearn</b>, <b>Pytorch</b>,
+                <b>Tensorflow</b>,
+                and <b>Keras</b>.
             </li>
             <li>
-                Very good command of the <b>English language</b>
+                Proficient in containerization and orchestration tools such as <b>Docker</b> and <b>Kubernetes</b>.
             </li>
             <li>
-                Very good knowledge of of environments such as: <b>Visual Studio</b>, <b>Intellij</b>, <b>Visual
-                    Studio Code</b>, <b>Google Colab</b>, <b>Jupyter notebook</b> and <b>Conda</b>
+                Strong knowledge of <b>Linux</b> and <b>Bash</b> scripting.
+            </li>
+            <li>
+                Solid understanding of <b>Windows Forms</b> development.
+            </li>
+            <li>
+                Extensive experience with frontend frameworks <b>VueJS</b> and <b>AngularJS</b>, including state
+                management, dynamic
+                data handling, and API integration.
+            </li>
+            <li>
+                Advanced knowledge of <b>NodeJS</b> with <b>Typescript</b>, <b>ExpressJS</b>, <b>NestJS</b>, and
+                <b>TypeORM</b>.
+            </li>
+            <li>
+                Proficient in <b>Go</b> programming, including <b>Go-Gin</b>, <b>GORM</b>, and <b>GRPC</b>.
+            </li>
+            <li>
+                Deep understanding of <b>Clean Code</b> principles (by <b>Uncle Bob</b>), <b>SOLID</b> principles,
+                <b>Domain-Driven
+                    Design (DDD)</b>, <b>Test-Driven Development (TDD)</b>, <b>YAGNI</b>, <b>DRY</b>, <b>KISS</b>, and
+                design
+                patterns such as <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, and <b>SOA</b>.
+            </li>
+            <li>
+                Advanced knowledge of relational databases including <b>SQL Server</b> (with expertise in <b>SQL
+                    Queries</b>,
+                <b>Stored Procedures</b>, <b>Triggers</b>, and <b>Indexes</b>), <b>MySQL</b>, and <b>PostgresSQL</b>.
+            </li>
+            <li>
+                Extensive experience with non-relational databases such as <b>MongoDB</b>, <b>Redis</b>, and basic
+                knowledge of
+                <b>Apache Cassandra</b>.
+            </li>
+            <li>
+                Skilled in writing unit tests and using the <b>Selenium</b> framework for automated testing.
+            </li>
+            <li>
+                Fluent in English, with strong communication skills.
+            </li>
+            <li>
+                Proficient in development environments such as <b>Visual Studio</b>, <b>Intellij</b>, <b>Visual Studio
+                    Code</b>,
+                <b>Google Colab</b>, <b>Jupyter Notebook</b>, and <b>Conda</b>.
             </li>
         </ul>
     </section>
@@ -339,78 +405,6 @@
                 </ul>
             </div>
         </div>
-        <!-- <h3>
-            LastLevel (Junior Full stack engineer)
-        </h3>
-        <p>
-            I worked as a full-stack developer using technologies such as PHP with Laravel framework and
-            JavaScript with frameworks, AngularJS and VueJS
-        </p>
-        <div class="content">
-            <div class="date">
-                2019.11-<br>
-                2019.02
-            </div>
-            <div>
-                <header>
-                    Implementation of new functionalities on the front and backend side in online stores and
-                    blogs as well as data analysis for these portals. I was responsible for:
-                </header>
-                <ul class="description">
-                    <li class="responsibility">
-                        Maintaining application state with <b>Vue Store</b> and <b>Angular NGRX</b>
-                    </li>
-                    <li class="responsibility">
-                        Sending <b>REST</b> requests using <b>Vue Axios</b> and <b>Angular HttpClient</b> to
-                        the
-                        backend
-                    </li>
-                    <li>
-                        Generating mobile and desktop applications from JavaScript code using
-                        <b>Electron</b>
-                        and <b>Apache Cordova</b>
-                    </li>
-                    <li class="responsibility">
-                        Dynamic display of backend data
-                    </li>
-                    <li class="responsibility">
-                        Implementation of new artwork using <b>VueJS</b> and <b>AngularJS</b>, and
-                        <b>bootstrap</b>, <b>material</b>, <b>tailwind css frameworks</b> and <b>SCSS</b>
-                    </li>
-                    <li class="responsibility">
-                        Implementation of <b>API</b> endpoints using the <b>Laravel</b> framework compatible
-                        with the <b>MVC</b> pattern
-                    </li>
-                    <li class="responsibility">
-                        Implementing user rights and roles and generating authentication tokens using
-                        <b>Laravel
-                            Passport</b>
-                    </li>
-                    <li class="responsibility">
-                        Implementation of writes and reads to the <b>MySQL</b> referential database
-                    </li>
-                    <li class="responsibility">
-                        Sending emails to users
-                    </li>
-                    <li class="responsibility">
-                        Testing <b>API</b> with <b>Postman</b>, <b>Insomnii</b> and <b>Swagger</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating new branches, resolving merge conflicts and adding changes to the
-                        repository
-                        via <b>Git</b> version control versions,
-                        and <b>GitLab</b>, and <b>RedMine</b>
-                    </li>
-                    <li>
-                        Data analysis using the <b>Python</b> language and algorithms: <b>PCA</b>,
-                        <b>Logistic
-                            Regression</b>, <b>Random Forests</b>, <b>K- Means</b>, <b>K Nearest
-                            Neighbors</b>
-                        from <b>Sklearn</b>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
         <h3>LastLevel (Junior Full Stack Engineer)</h3>
         <div class="content">
             <div class="date">
@@ -484,7 +478,7 @@
         <h2>Education</h2>
         <hr>
         <h3>
-            Warsaw University of Technology
+            Warsaw University of Technology (Master degree in computer science)
         </h3>
         <div class="content">
             <div class="date">
@@ -493,35 +487,16 @@
             </div>
             <div>
                 <header>
-                    I started my studies at the Warsaw School of Computer Science in extramural mode,
-                    specializing in <b>Data Science</b>. I am currently in my third year and I am starting an
-                    engineering thesis about generating synthetic data by the Deep Belief Network model. Some of my
-                    university projects were:
-                </header>
-                <ul class="description">
-                    <li class="responsibility">
-                        Writing artificial neuronal network from scratch using <b>Numpy</b> in <b>C#</b>
-                        language
-                    </li>
-                    <li class="responsibility">
-                        Creating <b>unsupervised nlp algorithms/models</b> to classify text in python and
-                        <b>PyTorch/Scikit</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating <b>CQRS</b> in <b>C#</b> using <b>Identity Server 4</b> and <b>RabbitMQ</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating application based on client and server using <b>Golang</b>, <b>GORM</b> and
-                        <b>GRPC</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating application using <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b> and <b>ReactJS</b>
-                    </li>
-                </ul>
+                    Currently pursuing a Master's degree in Computer Science at Warsaw University of Technology. My
+                    Master's dissertation focuses on developing a
+                    novel cryptocurrency
+                    using Rust, aiming to enhance security and efficiency in decentralized transactions.
             </div>
+            </header>
+        </div>
         </div>
         <h3>
-            Warsaw School of Computer Science
+            Warsaw School of Computer Science (Bachelor's degree in computer science)
         </h3>
         <div class="content">
             <div class="date">
@@ -530,31 +505,12 @@
             </div>
             <div>
                 <header>
-                    In 2019, I started my studies at the Warsaw School of Computer Science in extramural mode,
-                    specializing in <b>Data Science</b>. I am currently in my third year and I am starting an
-                    engineering thesis about generating synthetic data by the Deep Belief Network model. Some of my
-                    university projects were:
+                    Completed a Bachelor's degree in Computer Science at the Warsaw School of Computer Science. My
+                    Bachelor's dissertation
+                    involved developing an application using Golang and React that analyzes CVs with AI and Elastic
+                    Search algorithms to
+                    match candidates with job requirements.
                 </header>
-                <ul class="description">
-                    <li class="responsibility">
-                        Writing artificial neuronal network from scratch using <b>Numpy</b> in <b>C#</b>
-                        language
-                    </li>
-                    <li class="responsibility">
-                        Creating <b>unsupervised nlp algorithms/models</b> to classify text in python and
-                        <b>PyTorch/Scikit</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating <b>CQRS</b> in <b>C#</b> using <b>Identity Server 4</b> and <b>RabbitMQ</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating application based on client and server using <b>Golang</b>, <b>GORM</b> and
-                        <b>GRPC</b>
-                    </li>
-                    <li class="responsibility">
-                        Creating application using <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b> and <b>ReactJS</b>
-                    </li>
-                </ul>
             </div>
         </div>
     </main>
