--- a/tmpl/new.html
+++ b/tmpl/new.html
@@ -94,7 +94,7 @@
         }
 
         .responsibility {
-            margin: 20px 0px;
+            margin: 30px 0px;
         }
 
         footer {
@@ -115,7 +115,7 @@
                 <span class="link">m.semeniuk@icloud.com</span>
             </h4>
             <h4>
-                Telephone:<br>
+                Telephone/Whatsapp:<br>
                 <span class="link">+48 533 838 844</span>
             </h4>
             <h4>
@@ -131,14 +131,14 @@
     <header>
         <h2>Certificates</h2>
         <hr>
-        <div>
+        <div style="padding-top:2em;padding-bottom: 2em;">
             <img src="../img/AWS-Certified-Solutions-Architect-Professional.png" width="150" height="150" alt="">
             <img src="../img/AWS-Certified-Solutions-Architect-Associate.png" width="150" height="150" alt="">
             <img src="../img/AWS-Certified-SysOps-Administrator-Associate.png" width="150" height="150" alt="">
             <img src="../img/AWS-Certified-Developer-Associate.png" width="150" height="150" alt="">
             <img src="../img/AWS-Certified-Cloud-Practitioner.png" width="150" height="150" alt="">
         </div>
-        <div>
+        <div style="padding-top:2em;padding-bottom: 2em;">
             <img src="../img/Terraform-Certified-Associate.png" width="150" height="150" alt="">
         </div>
     </header>
@@ -233,9 +233,6 @@
             </li>
             <li>
                 Strong knowledge of <b>Linux</b> and <b>Bash</b> scripting.
-            </li>
-            <li>
-                Solid understanding of <b>Windows Forms</b> development.
             </li>
             <li>
                 Extensive experience with frontend frameworks <b>VueJS</b> and <b>AngularJS</b>, including state
