--- a/tmpl/cv_mikolaj_semeniuk_en.html
+++ b/tmpl/cv_mikolaj_semeniuk_en.html
@@ -133,9 +133,12 @@
     <header>
         <h2>Certificates</h2>
         <hr>
+
         <div style="padding-top:3em;padding-bottom: 2em;">
             <img src="../img/AWS-Certified-Solutions-Architect-Professional.png" width="150" height="150"
                 alt="AWS Certified Solutions Architect Professional">
+            <img src="../img/AWS-Certified-DevOps-Engineer-Professional.png" width="150" height="150"
+                alt="AWS Certified DevOps Engineer Professional">
             <img src="../img/AWS-Certified-Solutions-Architect-Associate.png" width="150" height="150"
                 alt="AWS Certified Solutions Architect Associate">
             <img src="../img/AWS-Certified-SysOps-Administrator-Associate.png" width="150" height="150"
@@ -148,6 +151,7 @@
         <div style="padding-top:2em;padding-bottom: 2em;">
             <img src="../img/Terraform-Certified-Associate.png" width="150" height="150"
                 alt="Terraform Certified Associate">
+            <img src="../img/ckad.png" width="150" height="150" alt="Certified Kubernetes Application Developer">
         </div>
     </header>
     <section>
