--- a/tmpl/cv_mikolaj_semeniuk_en.html
+++ b/tmpl/cv_mikolaj_semeniuk_en.html
@@ -107,7 +107,7 @@
 
 <body>
     <aside>
-        <img src="../img/profile.jpeg" alt="Profile Picture">
+        <img src="../img/profile2.jpeg" alt="Profile Picture">
         <h1>
             Mikolaj Semeniuk
         </h1>
