--- a/tmpl/cv_mikolaj_semeniuk_en.html
+++ b/tmpl/cv_mikolaj_semeniuk_en.html
@@ -107,7 +107,7 @@
 
 <body>
     <aside>
-        <img src="../img/profile2.jpeg" alt="Profile Picture">
+        <img src="../img/profile3.jpg" alt="Profile Picture">
         <h1>
             Mikolaj Semeniuk
         </h1>
@@ -151,7 +151,7 @@
         <div style="padding-top:2em;padding-bottom: 2em;">
             <img src="../img/Terraform-Certified-Associate.png" width="150" height="150"
                 alt="Terraform Certified Associate">
-            <img src="../img/ckad.png" width="150" height="150" alt="Certified Kubernetes Application Developer">
+            <!-- <img src="../img/ckad.png" width="150" height="150" alt="Certified Kubernetes Application Developer"> -->
         </div>
     </header>
     <section>
