--- a/tmpl/cv_mikolaj_semeniuk_en.html
+++ b/tmpl/cv_mikolaj_semeniuk_en.html
@@ -151,7 +151,7 @@
         <div style="padding-top:2em;padding-bottom: 2em;">
             <img src="../img/Terraform-Certified-Associate.png" width="150" height="150"
                 alt="Terraform Certified Associate">
-            <!-- <img src="../img/ckad.png" width="150" height="150" alt="Certified Kubernetes Application Developer"> -->
+            <img src="../img/ckad.png" width="150" height="150" alt="Certified Kubernetes Application Developer">
         </div>
     </header>
     <section>
